Add UI config and refactor frontend components
Introduces a new 'ui' section in the backend config for title and logo, with corresponding Go struct and accessor. Refactors frontend by removing Question.vue and adding modular components (Answers.vue, HeroCard.vue, LoadingDots.vue, QuestionAndAnswers.vue), updates navigation, result, and theme changer components, and adds a static logo. Updates index.html and OpenAPI spec to reflect UI changes.

--- a/web/index.html
+++ b/web/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="" data-theme="business">
+<html lang="" data-theme="dark">
 
 <head>
   <meta charset="UTF-8" />
@@ -19,7 +19,7 @@
       const parsed = storage ? JSON.parse(storage) : {};
 
       const language = parsed.language || (navigator.language?.split('-')[0] === 'de' ? 'de' : 'en');
-      const theme = parsed.darkMode ? 'business' : 'corporate';
+      const theme = parsed.darkMode ? 'dark' : 'light';
 
       document.documentElement.setAttribute('data-theme', theme);
       document.documentElement.setAttribute('lang', language);
@@ -30,7 +30,7 @@
 
 </head>
 
-<body>
+<body class='bg-base-200'>
   <div id="app"></div>
   <script type="module" src="/src/main.ts"></script>
 </body>
