Refactor theme and language handling, remove localStore
Replaces custom localStore with VueUse composables for theme and language management. ThemeChanger.vue now uses useToggle and IsDark from main.ts. The main.ts file sets the theme and language attributes based on app settings and user preferences. Removes theme/language initialization script from index.html and deletes localStore.ts.

--- a/web/index.html
+++ b/web/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="" data-theme="dark">
+<html>
 
 <head>
   <meta charset="UTF-8" />
@@ -12,21 +12,6 @@
   <meta name="apple-mobile-web-app-title" content="MyWebSite" />
   <link rel="manifest" href="/static/site.webmanifest" />
   <title>Quiz</title>
-  <script>
-    try {
-      const prefersDark = window.matchMedia('(prefers-color-scheme: dark)').matches;
-      const storage = localStorage.getItem('quiz');
-      const parsed = storage ? JSON.parse(storage) : {};
-
-      const language = parsed.language || (navigator.language?.split('-')[0] === 'de' ? 'de' : 'en');
-      const theme = parsed.darkMode ? 'dark' : 'light';
-
-      document.documentElement.setAttribute('data-theme', theme);
-      document.documentElement.setAttribute('lang', language);
-    } catch (e) {
-      // Silently ignore errors (e.g. malformed localStorage)
-    }
-  </script>
 
 </head>
 
