--- a/web/index.html
+++ b/web/index.html
@@ -15,7 +15,7 @@
 
 </head>
 
-<body class='bg-base-200'>
+<body>
   <div id="app"></div>
   <script type="module" src="/src/main.ts"></script>
 </body>
